--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+          <color name="scoreboard_separator">#29cdf0</color> 
+      <color name="default_played_tile_letter">#696969</color> 
+      <color name="played_tile_letter">#000000</color> 
     <color name="top_area_background">#29cdf0</color><!-- 177efe -->
     <color name="gameboard_bottom_ad_background">#2a2a2a</color>
     <color name="gameboard_bottom_fill_background">#e03b7d</color>
-    <color name="word_list_area_middle_border">#A020F0</color> <!-- 670099 -->
+    <color name="word_list_area_middle_border">#29cdf0</color> <!-- A020F0   670099 -->
     <color name="word_list_area_player_title_text">#ffffff</color>
     <color name="word_list_area_opponent_title_text">#ffffff</color>
     <color name="word_list_area_player_title_background">#ff6501</color> 
     <color name="word_list_area_opponent_title_background">#ff6501</color>
     <color name="word_list_area_opponent_background">#fff5ee</color> 
-    <color name="word_list_area_player_background">#fff5ee</color> 
+    <color name="word_list_area_player_background">#20fff5ee</color> 
     <color name="word_list_area_background">#cada39</color> 
-    <color name="button_area_background">#ee5b92</color> 
+   <color name="button_area_background">#ee5b92</color> 
     <color name="played_word_area_background">#BA55D3</color> <!-- B23AEE -->
         <color name="game_complete_area_background">#BA55D3</color> <!-- B23AEE -->
     <color name="scoreboard_background">#e03b7d</color> <!-- d42931 ae1d18 CD96CD DB70DB 024bc4 137ccd 64908A -->
@@ -37,6 +40,7 @@
 
 	<color name="game_board_tray_border">#eec591</color>  
 	<color name="game_board_tray_tile_letter">#080808</color>
+	<color name="game_board_bonus_tile_letter">#ffffff</color>
 	<color name="game_board_tray_tile_value">#000000</color> 
 	<color name="game_board_board_tile_letter">#080808</color>
 	<color name="game_board_board_tile_value">#000000</color>
@@ -56,7 +60,7 @@
     <color name="content_area_background_color">#fff5ee</color>
     <color name="content_area_background_pressed_color">#bbbdbd</color>
    
-    <color name="content_font_color">#1874CD</color>
+    <color name="content_font_color">#ffffff</color><!-- 1874CD -->
     <color name="form_border_color">#3366dd</color> <!-- previously 3366dd -->  
     <color name="title_bar_background_color">#FF0000</color><!-- FF0000  -->
     <color name="create_game_bottom_option_background">#ee5b92</color>
@@ -77,7 +81,7 @@
     <color name="form_header_text_color">#1874CD</color> 
     <color name="form_header_sub_text_color">#1874CD</color> 
     <color name="form_header_background_color">#e8cca8</color>
-    <color name="button_area_background_color">#ee5b92</color>
+    <color name="button_area_background_color">#e03b7d</color> <!-- #ee5b92 -->
     <color name="sub_text_color">#fff5ee</color> 
     <color name="progress_background_color">#cada39</color><!-- 3366dd -->
     <color name="progress_text_color">#000000</color> 
@@ -93,8 +97,9 @@
 	<color name="player_image_border_color">#000000</color>
 	<color name="player_image_background_color">#d2bfa6</color>
 	<color name="game_surface_fill_color">#eec591</color>
-	<color name="list_text_background_color">#20000000</color>
- 
+	<color name="list_text_background_color">#40000000</color>
+ 	<color name="scoreboard_area_background_color">#20000000</color>
+	
 	<color name="header_text_color">#fff5ee</color>
 	<color name="store_item_divider_color">#f62222</color>
 	<color name="header_bottom_border_color">#ee5b92</color>
