--- a/res/layout/toparealayout.xml
+++ b/res/layout/toparealayout.xml
@@ -15,7 +15,16 @@
          android:id="@+id/logo"
 	     style="@style/TopLogoStyle"  
 	    />
- 
+  		<TextView
+ 			style="@style/ActivityTitleStyle"
+ 			android:id="@+id/tvActivityTitle"
+        	android:layout_alignParentRight="true"
+ 		  	android:layout_marginRight="10dp"
+ 		  	android:layout_centerVertical="true"
+ 		    android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	
+        />
        <ImageButton 
          
           android:id="@+id/options"
