--- a/res/values/countdowntextstyle.xml
+++ b/res/values/countdowntextstyle.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<style name="CountdownTextStyle" >
-   		<item name="android:layout_marginLeft">8dp</item>
-   		<item name="android:layout_alignParentLeft">true</item>
-   	   	<item name="android:layout_width">wrap_content</item>
-		<item name="android:layout_height">40dp</item>
+ 
  		<item name="android:includeFontPadding">false</item>
-		<item name="android:gravity">center_vertical</item>   -
+		   		<item name="android:layout_width">wrap_content</item>   
+		<item name="android:layout_height">wrap_content</item>
 		<item name="android:textColor">@color/countdown_text_color</item>
-		<item name="android:textSize">40sp</item>
+		<item name="android:textSize">44sp</item>
+		<item name="android:layout_alignParentRight">true</item>
+		<item name="android:layout_marginRight">5dp</item>
 	</style>
 </resources>	   
 		    
