--- a/res/values/scorelabeltextstyle.xml
+++ b/res/values/scorelabeltextstyle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<style name="CountdownLabelTextStyle" >
+	<style name="ScoreLabelTextStyle" >
  
  		<item name="android:includeFontPadding">false</item>
 		<item name="android:layout_width">wrap_content</item>   
