--- a/res/layout/fullrules.xml
+++ b/res/layout/fullrules.xml
@@ -148,6 +148,14 @@
         android:paddingBottom="1dp"
         android:paddingTop="1dp"
         android:id="@+id/tvFullRulesScoring_7"
+        />
+    <TextView
+       style="@style/TextAreaStyle"
+        android:text="@string/full_rules_scoring_8" 
+        android:paddingLeft="10dp"
+        android:paddingBottom="1dp"
+        android:paddingTop="1dp"
+        android:id="@+id/tvFullRulesScoring_8"
         />                              
         <!-- the letters -->
    <TextView
