--- a/res/values/scoretextstyle.xml
+++ b/res/values/scoretextstyle.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<style name="CountdownTextStyle" >
+	<style name="ScoreTextStyle" >
  
  		<item name="android:includeFontPadding">false</item>
 		   		<item name="android:layout_width">wrap_content</item>   
 		<item name="android:layout_height">wrap_content</item>
-		<item name="android:textColor">@color/countdown_text_color</item>
-		<item name="android:textSize">54sp</item>
+		<item name="android:textColor">@color/score_text_color</item>
+		<item name="android:textSize">48sp</item>
 	 
  
 	</style>
