--- a/res/layout/store.xml
+++ b/res/layout/store.xml
@@ -4,7 +4,7 @@
     >
 
 <LinearLayout  
-    style="@style/LayoutStyle"
+    style="@style/GameboardLayoutStyle"
   
     android:orientation="vertical" >
    
@@ -84,14 +84,7 @@
 				        android:layout_below="@id/tvPremiumUpgradeTitle"
 				        android:layout_toLeftOf="@id/llPremiumUpgradePriceWrapper"
 				        />
-				  <View
-				      android:layout_width="fill_parent"
-				      android:layout_height="2dp" 
-				      android:background="@color/store_item_divider_color" 
-				     
-				      android:layout_marginTop="3dp"
-				      android:layout_below="@id/tvPremiumUpgradeDescription"
-				      />
+				 
 			  </RelativeLayout>
 						  
 		</LinearLayout>
