--- a/res/layout/gamesurface.xml
+++ b/res/layout/gamesurface.xml
@@ -368,7 +368,7 @@
            android:layout_height="wrap_content"
            ads:adUnitId="@string/admob_pub_id_game_surface"
            android:layout_centerHorizontal="true" 
-           ads:adSize="SMART_BANNER"
+           ads:adSize="BANNER"
            ads:testDevices="TEST_EMULATOR"
            ads:loadAdOnCreate="false"/>
 	   
